# sqladmin-litestar-plugin

./: .gitignore  pyproject.toml
starlette_admin_litestar_plugin/: __init__.py
starlette_admin_litestar_plugin/ext/: advanced_alchemy.py
